# simple-homepage

./: .gitignore  404.html  CONTRIBUTING.rst  README.md  _settings.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: on-merge-to-main.yml  on-pull-request.yml  on-release-main.yml
.github/workflows/setup-poetry-env/: action.yml
commands/: index.html
docs/: commands.md  getting_started.md  index.md  modules.md
docs/demo/dark/static/: homepage.js  stylesheet.css
docs/demo/light/: homepage.html
docs/demo/light/static/: stylesheet.css
docs/example/: homepage.html
docs/example/static/: stylesheet.css
getting_started/: index.html
search/: search_index.json
simple_homepage/: cli.py  directory_builder.py  generator.py  homepage_generator.py  init.py  main.py
simple_homepage/files/: settings.yaml
simple_homepage/files/template/: _homepage.html
simple_homepage/files/template/static/: _stylesheet.css  homepage.js
template/: _homepage.html
template/static/: stylesheet.css
tests/: test_foo.py  test_simple_homepage.py
